# real_estate

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml  worker.py
.github/workflows/: ci.yaml
app/: app.py  database.py  exceptions.py  models.py  rabbit_producer.py  settings.py
app/.github/workflow/: ci.yaml
app/logging/: logging.py
app/repositories/: image_repository.py
app/routers/: health_check_router.py  image_router.py
app/schemas/: image_schemas.py
app/services/: health_check_service.py  image_service.py
migrations/: env.py
migrations/versions/: c9f41bde33ad_init_migration.py
tests/: conftest.py
tests/unit/: test_repository.py  test_service.py  test_worker.py
